service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elf-service
  namespace: elf
spec:
  type: NodePort
  selector:
    app: elf-service
  ports:
    - port: 80
      targetPort: 80
